补充git和jvm知识